// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project/UserList list 1`] = `
.c13 {
  height: 155px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c14 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c16 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c0 {
  width: calc(100% - 50px);
}

.c1 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  margin: 20px -20px 0 0;
  padding-right: 20px;
  -webkit-overflow-scrolling: touch;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c8 {
  display: none;
}

.c9 {
  margin-right: 20px;
}

.c10 {
  color: #FFF;
}

.c11 {
  color: #FFF;
}

.c4 {
  display: none;
}

.c5 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #2F2F36;
  cursor: pointer;
}

.c5:hover {
  border-bottom-color: #FFF;
}

.c7 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #FFF;
  cursor: pointer;
}

.c7:hover {
  border-bottom-color: #FFF;
}

.c6 {
  color: #FFF;
  display: block;
  padding: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1040px) {
  .c15 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c14 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c16 {
    width: 240px;
  }
}

@media (min-width:1040px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
    margin: 60px 0 40px 0;
  }
}

@media (min-width:1040px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin: 29px 0 20px 0;
    font-size: 15px;
  }
}

@media (min-width:1040px) {
  .c12 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": "18px",
          "width": "100%",
        }
      }
    >
      <div>
        <div
          className=""
        >
          <h2
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            <span>
              Users
            </span>
          </h2>
          <h1
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            <span>
              Project users list
            </span>
          </h1>
        </div>
      </div>
      <button
        disabled={false}
        id="topHeaderOpenMenuBtn"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": 6,
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#000",
          "color": "#FFF",
          "maxWidth": null,
          "minHeight": "100vh",
          "padding": "18px 20px 27px",
          "position": "fixed",
          "right": 0,
          "textAlign": "left",
          "top": 0,
          "transform": "translateX(100%)",
          "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
          "visibility": 0,
          "width": "100%",
          "zIndex": 9999,
        }
      }
    >
      <div
        className=""
      >
        <div
          className=""
        >
          <h2
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            <span>
              Users
            </span>
          </h2>
          <h1
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            <span>
              Project users list
            </span>
          </h1>
        </div>
      </div>
      <div
        className="c1"
      >
        <ul
          className="c2"
        />
        <ul
          className="c3"
        />
      </div>
      <button
        disabled={false}
        id="topHeaderCloseMenuButton"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": "6px",
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <a
          className="c6"
          href="/project/1"
          onClick={[Function]}
        >
          <span>
            Settings
          </span>
        </a>
      </div>
      <div
        className="c5"
      >
        <a
          className="c6"
          href="/project/1/datasource"
          onClick={[Function]}
        >
          <span>
            Sources
          </span>
        </a>
      </div>
      <div
        className="c7"
      >
        <a
          className="c6"
          href="/project/1/user"
          onClick={[Function]}
        >
          <span>
            Users
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    className="c8"
  >
    <div
      className="c9"
    >
      <h2
        className="c10"
        id="desktopHeaderTitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        <span>
          Users
        </span>
      </h2>
      <h1
        className="c11"
        id="desktopHeaderSubtitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHight": 1.25,
            "margin": 0,
          }
        }
      >
        <span>
          Project users list
        </span>
      </h1>
    </div>
    <div
      className=""
    >
      <button
        disabled={false}
        id="addUserDesktopBtn"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#FFF",
            "border": "none",
            "borderRadius": "48px",
            "color": "#000",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "height": "60px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            "width": "60px",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#000",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
  <section
    className="c12"
  />
  <div
    className="c13"
  >
    <div
      className="c14"
    >
      <div
        className="c15"
      >
        <button
          className="c16"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <span>
            Back
          </span>
        </button>
        <button
          disabled={false}
          id="addUserBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project/UserList list with users 1`] = `
.c18 {
  height: 155px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c19 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c21 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c0 {
  width: calc(100% - 50px);
}

.c1 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  margin: 20px -20px 0 0;
  padding-right: 20px;
  -webkit-overflow-scrolling: touch;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c8 {
  display: none;
}

.c9 {
  margin-right: 20px;
}

.c10 {
  color: #FFF;
}

.c11 {
  color: #FFF;
}

.c4 {
  display: none;
}

.c5 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #2F2F36;
  cursor: pointer;
}

.c5:hover {
  border-bottom-color: #FFF;
}

.c7 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #FFF;
  cursor: pointer;
}

.c7:hover {
  border-bottom-color: #FFF;
}

.c6 {
  color: #FFF;
  display: block;
  padding: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13 {
  margin-bottom: 20px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c17 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0 -5px 0 5px;
}

.c14 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c15 {
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 24px;
  font-weight: 600;
}

.c16 {
  display: block;
  padding-top: 10px;
  word-break: break-all;
  font-weight: 200;
}

@media (min-width:1040px) {
  .c20 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c19 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c21 {
    width: 240px;
  }
}

@media (min-width:1040px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
    margin: 60px 0 40px 0;
  }
}

@media (min-width:1040px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin: 29px 0 20px 0;
    font-size: 15px;
  }
}

@media (min-width:1040px) {
  .c13 {
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    width: calc(100%/3 - 20px);
    max-width: 320px;
    min-height: 192px;
    margin: 10px;
  }
}

@media (min-width:1040px) {
  .c12 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": "18px",
          "width": "100%",
        }
      }
    >
      <div>
        <div
          className=""
        >
          <h2
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            <span>
              Users
            </span>
          </h2>
          <h1
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            <span>
              Project users list
            </span>
          </h1>
        </div>
      </div>
      <button
        disabled={false}
        id="topHeaderOpenMenuBtn"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": 6,
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#000",
          "color": "#FFF",
          "maxWidth": null,
          "minHeight": "100vh",
          "padding": "18px 20px 27px",
          "position": "fixed",
          "right": 0,
          "textAlign": "left",
          "top": 0,
          "transform": "translateX(100%)",
          "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
          "visibility": 0,
          "width": "100%",
          "zIndex": 9999,
        }
      }
    >
      <div
        className=""
      >
        <div
          className=""
        >
          <h2
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            <span>
              Users
            </span>
          </h2>
          <h1
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            <span>
              Project users list
            </span>
          </h1>
        </div>
      </div>
      <div
        className="c1"
      >
        <ul
          className="c2"
        />
        <ul
          className="c3"
        />
      </div>
      <button
        disabled={false}
        id="topHeaderCloseMenuButton"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": "6px",
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <a
          className="c6"
          href="/project/1"
          onClick={[Function]}
        >
          <span>
            Settings
          </span>
        </a>
      </div>
      <div
        className="c5"
      >
        <a
          className="c6"
          href="/project/1/datasource"
          onClick={[Function]}
        >
          <span>
            Sources
          </span>
        </a>
      </div>
      <div
        className="c7"
      >
        <a
          className="c6"
          href="/project/1/user"
          onClick={[Function]}
        >
          <span>
            Users
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    className="c8"
  >
    <div
      className="c9"
    >
      <h2
        className="c10"
        id="desktopHeaderTitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        <span>
          Users
        </span>
      </h2>
      <h1
        className="c11"
        id="desktopHeaderSubtitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHight": 1.25,
            "margin": 0,
          }
        }
      >
        <span>
          Project users list
        </span>
      </h1>
    </div>
    <div
      className=""
    >
      <button
        disabled={false}
        id="addUserDesktopBtn"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#FFF",
            "border": "none",
            "borderRadius": "48px",
            "color": "#000",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "height": "60px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            "width": "60px",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#000",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
  <section
    className="c12"
  >
    <div
      className="c13"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="c14"
      >
        <a
          className="c15"
          href="/project/1/user/1"
          onClick={[Function]}
        >
          Alan
           
          Watts
        </a>
        <span
          className="c16"
        />
      </div>
      <div
        className="c17"
      >
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 40,
              "margin": "0",
              "marginTop": -5,
              "minHeight": 40,
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": 40,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 40,
                "width": 40,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c13"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="c14"
      >
        <a
          className="c15"
          href="/project/1/user/2"
          onClick={[Function]}
        >
          Dale
           
          Chihuly
        </a>
        <span
          className="c16"
        />
      </div>
      <div
        className="c17"
      >
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 40,
              "margin": "0",
              "marginTop": -5,
              "minHeight": 40,
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": 40,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 40,
                "width": 40,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c13"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "padding": "12px 14px 14px",
        }
      }
    >
      <div
        className="c14"
      >
        <a
          className="c15"
          href="/project/1/user/3"
          onClick={[Function]}
        >
          Dave
           
          Bowie
        </a>
        <span
          className="c16"
        />
      </div>
      <div
        className="c17"
      >
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 40,
              "margin": "0",
              "marginTop": -5,
              "minHeight": 40,
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": 40,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 40,
                "width": 40,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </section>
  <div
    className="c18"
  >
    <div
      className="c19"
    >
      <div
        className="c20"
      >
        <button
          className="c21"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <span>
            Back
          </span>
        </button>
        <button
          disabled={false}
          id="addUserBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
